--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@
     height: 50px;
     margin: 10px;
 }
+
+.clearButton {
+    border: 1px solid black;
+    background-color: #efefef;
+    font-weight: bold;
+    width: 300px;
+    height: 50px;
+    margin: 10px;
+}
+
 #inputText {
     width: 90%;
     height: 50px;
